--- a/scripts/nagios.cfg
+++ b/scripts/nagios.cfg
@@ -35,7 +35,7 @@ cfg_file=contacts.cfg
 #cfg_dir=objects/discovery
 
 #Some macros
-#resource_file=resource.cfg
+resource_file=resource.cfg
 
 
 #Dummy conf with 150 hosts, each one with 10 services
