--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,10 @@ before_install:
  - sudo chmod -R g+w /var/www/monit_testsuite
  - cd /var/www/monit_testsuite && ant -Dclearsavepoint='true' -Dbasedir=. -f ./glpi/plugins/monitoring/phpunit/build.xml composer
 
-script: cd /var/www/monit_testsuite && ant -Dclearsavepoint='true' -Dbasedir=. -f ./glpi/plugins/monitoring/phpunit/build.xml phpunit.all
+script:
+ - script: cd /var/www/monit_testsuite && ant -Dclearsavepoint='true' -Dbasedir=. -f ./glpi/plugins/monitoring/phpunit/build.xml phpunit.all
 
+after_script:
+  - php vendor/bin/coveralls
+  # or enable logging
+  - php vendor/bin/coveralls -v
