--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq libapache2-mod-php5 php5-cli php5-mysql php5-xmlrpc php5-xsl php5-ldap php5-json php5-intl php5-imap php5-gd php5-curl ant xsltproc
  - git clone git://github.com/fusioninventory/glpi.git glpi
+ - cd glpi && git reset --hard 8fd8ef905227b83af8532e027a35223b8a117b99 && cd ..
  - sudo mkdir /var/www/monit_testsuite/
  - sudo mv glpi /var/www/monit_testsuite/glpi
  - mysql -u root -e "SET PASSWORD FOR 'travis'@'localhost' = PASSWORD('travis')"
