--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,48 @@
+sudo: false
 language: php
 php:
   - 5.3
   - 5.4
   - 5.5
   - 5.6
+
+addons:
+  apt:
+    packages:
+    - libapache2-mod-php5
+    - php5-cli
+    - php5-mysql
+    - php5-xmlrpc
+    - php5-xsl
+    - php5-ldap
+    - php5-json
+    - php5-intl
+    - php5-imap
+    - php5-gd
+    - php5-curl
+    - ant
+    - xsltproc
+
 before_install:
- - composer self-update
- - sudo apt-get update -qq
- - sudo apt-get install -qq libapache2-mod-php5 php5-cli php5-mysql php5-xmlrpc php5-xsl php5-ldap php5-json php5-intl php5-imap php5-gd php5-curl ant xsltproc
+ - cd ..
  - git clone git://github.com/fusioninventory/glpi.git glpi
  - cd glpi && git reset --hard 8fd8ef905227b83af8532e027a35223b8a117b99 && cd ..
- - sudo mkdir /var/www/monit_testsuite/
- - sudo mv glpi /var/www/monit_testsuite/glpi
  - mysql -u root -e "SET PASSWORD FOR 'travis'@'localhost' = PASSWORD('travis')"
  - mysql -u root -e "GRANT ALL PRIVILEGES ON glpi.* TO 'travis'@'localhost';"
  - mysql -u root -e "FLUSH PRIVILEGES;"
- - sudo echo '<?php class DB extends DBmysql {var $dbhost = "localhost";var $dbuser = "travis";var $dbpassword= "travis";var $dbdefault = "glpi";}' > /var/www/monit_testsuite/glpi/config/config_db.php
- - sudo mkdir /var/www/monit_testsuite/glpi/plugins/monitoring
- - sudo cp -r . /var/www/monit_testsuite/glpi/plugins/monitoring/
- - sudo chown -R travis:www-data /var/www/monit_testsuite
- - sudo chmod -R g+w /var/www/monit_testsuite
- - cd /var/www/monit_testsuite && ant -Dclearsavepoint='true' -Dbasedir=. -f ./glpi/plugins/monitoring/phpunit/build.xml composer
+ - echo '<?php class DB extends DBmysql {var $dbhost = "localhost";var $dbuser = "travis";var $dbpassword= "travis";var $dbdefault = "glpi";}' > glpi/config/config_db.php
+ - mv -f monitoring  glpi/plugins/
+ - ant -Dclearsavepoint='true' -Dbasedir=. -f ./glpi/plugins/monitoring/phpunit/build.xml composer
 
-script: cd /var/www/monit_testsuite && ant -Dclearsavepoint='true' -Dbasedir=. -f ./glpi/plugins/monitoring/phpunit/build.xml phpunit.all
+install:
+ - composer require satooshi/php-coveralls
+
+script: ant -Dclearsavepoint='true' -Dbasedir=. -f ./glpi/plugins/monitoring/phpunit/build.xml phpunit.all
+
+after_script:
+ - cp -fr build glpi/plugins/monitoring/
+ - cd glpi/plugins/monitoring/
+ - composer require satooshi/php-coveralls
+ - php vendor/bin/coveralls -v
+
 
